--- a/preview/index.css
+++ b/preview/index.css
@@ -1,12 +1,31 @@
+* {
+  box-sizing: border-box;
+}
+
 html, body {
   margin: 0;
   padding: 0;
   height: 100%;
 }
 
+.operate {
+  height: 80px;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  padding-left: 20px;
+}
+
+.select-container {
+  width: 200px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 100%;
+}
+
 .app {
   display: flex;
-  height: 100%;
+  height: calc(100% - 80px);
   overflow: hidden;
 }
 
