--- a/preview/index.css
+++ b/preview/index.css
@@ -1,3 +1,7 @@
+:root {
+  --operate_height: 60px;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -6,13 +10,22 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .operate {
-  height: 80px;
-  border: 1px solid #ccc;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-  padding-left: 20px;
+  height: var(--operate_height);
+  /*border: 1px solid #ccc;*/
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03),0 1px 6px -1px rgba(0, 0, 0, 0.02),0 2px 4px 0 rgba(0, 0, 0, 0.02);
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  backdrop-filter: blur(10px);
+}
+
+.version {
+  color:  #333;
 }
 
 .select-container {
@@ -24,8 +37,9 @@ html, body {
 }
 
 .app {
+  margin-top: 10px;
   display: flex;
-  height: calc(100% - 80px);
+  height: calc(100% - var(--operate_height) - 10px);
   overflow: hidden;
 }
 
